condformat 0.2.0.9000
----------------------------------------------------------------

* PDF support: Export table to LaTeX using knitr.

condformat 0.2.0
----------------------------------------------------------------

* First CRAN submission
* Add theme_htmlTable to pass custom formatting options to htmlTable.
* Improve knitr compatibility


condformat 0.1.1
----------------------------------------------------------------

* Change to a ggplot-like syntax
